<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Osprey</string>
  <string name="mapbox_api_key">pk.eyJ1Ijoic2hhbmV0IiwiYSI6ImNpbXZnbnBhMjAydDl3a2x1ejNoNWoydHMifQ.WIi_Jv4TO3hOzj-E120rYg</string>
  <string name="radio_log">osprey.log</string>
  <string name="exception_log">osprey_debug.log</string>

  <string name="last_known_latitude">last_known_latitude</string>
  <string name="last_known_longitude">last_known_longitude</string>
  <string name="tracked_latitude">tracked_latitude</string>
  <string name="tracked_longitude">tracked_longitude</string>
  <string name="no_last_known_location">Unknown last location</string>
  <string name="no_tracked_location">No tracked location set</string>
  <string name="map_style">map_style</string>

  <string name="page_title_map">Location</string>
  <string name="page_title_tracking">Tracking</string>
  <string name="page_title_altitude">Altitude</string>
  <string name="page_title_acceleration">Acceleration</string>
  <string name="page_title_orientation">Orientation</string>
  <string name="page_title_events">Events</string>
  <string name="page_title_status">Status</string>
  <string name="page_title_raw">Raw</string>

  <string name="default_coordinates">Waiting for location&#8230;</string>
  <string name="default_altitude">Waiting for altitude&#8230;</string>
  <string name="default_acceleration">Waiting for data&#8230;</string>
  <string name="default_orientation">Waiting for data&#8230;</string>
  <string name="default_events">Waiting for data&#8230;</string>
  <string name="default_raw">Waiting for data&#8230;</string>

  <string name="okay">Okay</string>
  <string name="cancel">Cancel</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="download">Download</string>
  <string name="go">Go</string>
  <string name="delete">Delete</string>
  <string name="latitude">Latitude:</string>
  <string name="longitude">Longitude:</string>

  <string name="dialog_title_disabled_gps">GPS Disabled</string>
  <string name="dialog_disabled_gps">This device\'s GPS is disabled. For tracking to work, a GPS fix is required.</string>
  <string name="dialog_title_radio_error">Failed to initialize radio</string>
  <string name="dialog_radio_init">Is it plugged in?</string>
  <string name="dialog_title_map_style">Map Style</string>
  <string name="dialog_title_launch_sites">Launch Sites</string>
  <string name="dialog_title_download_map">Download Map</string>
  <string name="dialog_title_pressure_setting">Pressure Setting</string>
  <string name="dialog_title_event_altitude">Event Altitude (ft)</string>
  <string name="dialog_title_apogee_fire_confirm">FIRE APOGEE?</string>
  <string name="dialog_title_main_fire_confirm">FIRE MAIN?</string>
  <string name="dialog_title_tracked_location">Set TrackedLocation</string>

  <string name="menu_option_map_style">Change map style</string>
  <string name="menu_option_map_follow">Map following</string>
  <string name="menu_option_clear_ground_track">Clear ground track</string>
  <string name="menu_option_show_last_known_location">Show last known location</string>
  <string name="menu_option_list_offline_maps">Launch sites</string>
  <string name="menu_option_download_map">Add launch site</string>
  <string name="menu_option_clear_graph">Clear graph</string>
  <string name="menu_option_set_main_altitude">Set main altitude</string>
  <string name="menu_option_arm_igniter">Arm igniter</string>
  <string name="menu_option_disarm_igniter">Disarm igniter</string>
  <string name="menu_option_zero_sensors">Zero sensors</string>
  <string name="menu_option_enable_logging">Enable logging</string>
  <string name="menu_option_disable_logging">Disable logging</string>
  <string name="menu_option_set_pressure_setting">Set pressure setting</string>
  <string name="menu_option_show_tracked_location">Show tracked location</string>
  <string name="menu_option_set_tracked_location">Set tracked location</string>

  <string name="download_started">Download started</string>
  <string name="no_regions">No launch sites exist</string>
  <string name="offline_map_error">Error retrieving launch sites</string>
  <string name="map_downloading_title">Launch site downloading</string>
  <string name="map_downloading">Downloading offline map for launch site</string>
  <string name="map_download_complete">Launch site map downloaded</string>
  <string name="map_download_error">Error downloading launch site map</string>
  <string name="map_download_too_large">The selected area is too large to download. Zoom in and try again.</string>
  <string name="map_deleted">Launch site deleted</string>
  <string name="download_map_info">The launch site will be defined as the current location on the map. Offline maps will be downloaded for this region. Note that only the currently selected map style will be saved for offline use.</string>
  <string name="tracked_location_info">Set a custom location to track directly to on the map and tracking views.</string>

  <string name="start_flight">Start Flight</string>
  <string name="end_flight">End Flight</string>
  <string name="fire_apogee">Fire Apogee</string>
  <string name="fire_main">Fire Main</string>

  <string name="degrees">&#xb0;</string>
  <string name="at">\@</string>
  <string name="meters">m</string>
  <string name="feet">ft</string>
  <string name="g">g</string>
  <string name="volts">V</string>
  <string name="inches_mercury">\" Hg</string>

  <string name="roll">Roll</string>
  <string name="pitch">Pitch</string>
  <string name="heading">Heading</string>

  <string name="pressure_altitude">Pressure</string>
  <string name="gps_altitude">GPS</string>

  <string name="armed">Armed</string>
  <string name="main_altitude">Main deployment</string>
  <string name="apogee_fired">Apogee fired</string>
  <string name="main_fired">Main fired</string>
  <string name="not_armed">WARNING: Igniter is not armed</string>

  <string name="battery">Battery</string>
  <string name="phase">Phase:</string>
  <string name="logging">Logging</string>
  <string name="previous_command">Previous Command</string>
  <string name="no_previous_command">No previous command</string>

  <array name="map_styles">
    <item>Dark</item>
    <item>Emerald</item>
    <item>Light</item>
    <item>Outdoors</item>
    <item>Streets</item>
    <item>Satellite</item>
    <item>Streets &amp; Satellite</item>
  </array>

  <array name="phases">
    <item>Pad</item>
    <item>Boost</item>
    <item>Coast</item>
    <item>Drogue</item>
    <item>Main</item>
    <item>Landed</item>
  </array>
</resources>
