<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android" >
  <item android:id="@+id/map_style_option"
    android:title="@string/menu_option_map_style"
    android:showAsAction="never" />
  <item android:id="@+id/map_follow_option"
    android:title="@string/menu_option_map_follow"
    android:showAsAction="never"
    android:checkable="true" />
  <item android:id="@+id/clear_ground_track_option"
    android:title="@string/menu_option_clear_ground_track"
    android:showAsAction="never" />
  <item android:id="@+id/show_last_known_location_option"
    android:title="@string/menu_option_show_last_known_location"
    android:showAsAction="never" />
  <item android:id="@+id/list_offline_maps_option"
    android:title="@string/menu_option_list_offline_maps"
    android:showAsAction="never" />
  <item android:id="@+id/download_map_option"
    android:title="@string/menu_option_download_map"
    android:showAsAction="never" />
</menu>
